@@ -30,8 +30,8 @@ int kchartEngine::doLabels() {
       debug( "No value for x label in col %d", labels );
       continue;
     }
-    //if( cellval.value.type() != QVariant::String ) {
-    if( cellval.value.type() != QVariant::CString ) {
+    if( cellval.value.type() != QVariant::String ) {
+    //if( cellval.value.type() != QVariant::CString ) {
       debug( "Value for x label in col %d is not a string", labels );
       continue;
     }
@@ -138,18 +138,37 @@ void kchartEngine::drawGridAndLabels(bool do_ylbl_fractions) {
 	char	*price_to_str( float, int*, int*, int*, const char* );
 	char	nmrtr[3+1], dmntr[3+1], whole[8];
 	char	all_whole = ylbl_interval<1.0? FALSE: TRUE;
-	char	*ylbl_str = price_to_str( tmp_y,&n,&d,&w,
-					  do_ylbl_fractions? QString::null: params->ylabel_fmt );
-					  
-	if( do_ylbl_fractions )	{
-	  sprintf( nmrtr, "%d", n );
-	  sprintf( dmntr, "%d", d );
-	  sprintf( whole, "%d", w );
-	}
+	char	*ylbl_str;
+	
+	if(params->stack_type==KCHARTSTACKTYPE_PERCENT)
+		{
+		ylbl_str= price_to_str( tmp_y,&n,&d,&w,"%.0f%% ");
+		if(!params->ylabel_fmt.isEmpty())
+			{
+			int len=params->ylabel_fmt.length();
+         		//remove %g 
+         		QString tmp=params->ylabel_fmt.right(len-3);
+			
+			strcat(ylbl_str,tmp);
+			}
+		}
+	else
+		{
+		ylbl_str= price_to_str( tmp_y,&n,&d,&w,
+					 do_ylbl_fractions? QString::null: params->ylabel_fmt );
+		}
+	
+	if( do_ylbl_fractions && params->stack_type!=KCHARTSTACKTYPE_PERCENT)	
+		{
+	  	sprintf( nmrtr, "%d", n );
+	  	sprintf( dmntr, "%d", d );
+	  	sprintf( whole, "%d", w );
+		}
 
 	//qDebug( "drawing 1" );
 
-	if( params->grid ) {
+	if( params->grid ) 
+	{
 	  int	x1, x2, y1, y2;
 	  // int	gridline_clr = tmp_y == 0.0? LineColor: GridColor;
 	  // tics
@@ -174,8 +193,10 @@ void kchartEngine::drawGridAndLabels(bool do_ylbl_fractions) {
 	// PENDING(kalle) Originally, here was always used one
 	// font smaller than params->yAxisFont. Do that again?
 	if( params->yaxis )
-	  if( do_ylbl_fractions ) {
-	    if( w || (!w && !n && !d) ) {
+	  if( do_ylbl_fractions && params->stack_type!=KCHARTSTACKTYPE_PERCENT) 
+	  {
+	    if( w || (!w && !n && !d) ) 
+	    {
 	      p->setPen( labelcolor );
 	      p->setFont( params->yAxisFont() );
 	      p->drawText( PX(0)-2-strlen(whole)*params->yAxisFontWidth()
@@ -187,13 +208,14 @@ void kchartEngine::drawGridAndLabels(bool do_ylbl_fractions) {
 			   PY(tmp_y)-params->yAxisFontHeight()/2,
 			   whole );
 	    }
-
+		
 
 	    // qDebug( "drawing 3" );
 
 	    // PENDING( original uses a 1 step smaller
 	    // font here. Do that, too?
-	    if( n )	{
+	    if( n )	
+	    {
 	      p->setPen( labelcolor );
 	      p->setFont( params->yAxisFont() );
 	      p->drawText( PX(0)-2-strlen(nmrtr)*params->yAxisFontWidth()
@@ -209,7 +231,10 @@ void kchartEngine::drawGridAndLabels(bool do_ylbl_fractions) {
 			   PY(tmp_y)-params->yAxisFontHeight()/2 + 3,
 			   dmntr );
 	    }
-	  } else {
+	  } 
+	  else 
+	  {
+	    
 	    p->setPen( labelcolor );
 	    p->setFont( params->yAxisFont() );
 	    p->drawText( PX(0)-2-strlen(ylbl_str)*params->yAxisFontWidth(),
@@ -232,7 +257,7 @@ void kchartEngine::drawGridAndLabels(bool do_ylbl_fractions) {
 	  p->setPen( GridColor );
 	  p->drawLine( PX(num_points-1+(params->do_bar()?2:0)), PY(tmp_y),
 		       PX(num_points-1+(params->do_bar()?2:0))+3, PY(tmp_y) );
-	  if( atof(vylbl) == 0.0 )									/* rounding can cause -0 */
+	  if( atof(vylbl) == 0.0 )			/* rounding can cause -0 */
 	    strcpy( vylbl, "0" );
 	  p->setPen( label2color );
 	  p->setFont( params->yAxisFont() );
@@ -251,8 +276,7 @@ void kchartEngine::drawGridAndLabels(bool do_ylbl_fractions) {
     /* catch last (bottom) grid line - specific to an "off" requested interval */
     if( params->grid && params->threeD() ) {
       setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets:
-    num_sets:
-      1;			// backmost
+    num_sets:1;			// backmost
       p->setPen( GridColor );
       p->drawLine( PX(0), PY(lowest), PX(num_points-1+(params->do_bar()?2:0)), PY(lowest) );
       setno = 0;											// set back to foremost
@@ -317,13 +341,14 @@ void kchartEngine::draw3DGrids() {
 void kchartEngine::drawShelfGrids() {
   int	x1, x2, y1, y2;
   // tics
-  x1 = PX(0);		y1 = PY(0);
+  x1 = PX(0);		
+  y1 = PY(0);
   p->setPen( LineColor );
   p->drawLine( x1-2, y1, x1, y1 );
   setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets:
- num_sets:
-  1;				// backmost
-  x2 = PX(0);		y2 = PY(0);								// w/ new setno
+ num_sets:1;				// backmost
+  x2 = PX(0);		
+  y2 = PY(0);								// w/ new setno
   p->setPen( LineColor );
   p->drawLine( x1, y1, x2, y2 );			// depth for 3Ds
   p->drawLine( x2, y2, PX(num_points-1+(params->do_bar()?2:0)), y2 );
@@ -352,10 +377,9 @@ void kchartEngine::drawXTicks() {
 	x1 = PX(i);		y1 = PY(lowest);
 	p->setPen( GridColor );
 	p->drawLine( x1, y1, x1,  y1+2 );
-	setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets:
-      num_sets:
-	1; // backmost
-	x2 = PX(i);		y2 = PY(lowest);
+	setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets:num_sets:1; // backmost
+	x2 = PX(i);		
+	y2 = PY(lowest);
 	p->setPen( GridColor );
 	p->drawLine( x1, y1, x2,  y2 );		// depth perspective
 	p->drawLine( x2, y2, x2,  PY(highest) );
@@ -446,30 +470,29 @@ void kchartEngine::drawVolumeGrids() {
 }
 
 
-void kchartEngine::draw3DAnnotation() {
+void kchartEngine::draw3DAnnotation() 
+{
   int setno;
   int	x1 = PX(params->annotation->point+(params->do_bar()?1:0)),
     y1 = PY(lowest);
   setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets:
- num_sets:
-  1; // backmost
+ num_sets:1; // backmost
   p->setPen( AnnoteColor );
   p->drawLine( x1, y1, PX(params->annotation->point+(params->do_bar()?1:0)), PY(lowest) );
   p->drawLine( PX(params->annotation->point+(params->do_bar()?1:0)), PY(lowest),
-	       PX(params->annotation->point+(params->do_bar()?1:0)), PY(highest)-2 );
+	       PX(params->annotation->point+(params->do_bar()?1:0)), PY(highest)-2);
   setno = 0;
 }
 
-void kchartEngine::draw3DShelf() {
-      int	x2 = PX( num_points-1+(params->do_bar()?2:0) ),
-	y2 = PY( 0 );
+void kchartEngine::draw3DShelf() 
+{
+      int x2 = PX( num_points-1+(params->do_bar()?2:0) ),y2 = PY( 0 );
       
       p->setPen( LineColor );
       p->drawLine( PX(0), PY(0), x2, y2 );		// front line
-      setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets: num_sets:
-	1;				// backmost
+      setno = params->stack_type==KCHARTSTACKTYPE_DEPTH? num_hlc_sets? num_hlc_sets: num_sets:1;				// backmost
       // depth for 3Ds
       p->setPen( LineColor );
       p->drawLine( x2, y2, PX(num_points-1+(params->do_bar()?2:0)), PY(0) );
-      setno = 0;												// set back to foremost
+      setno = 0;// set back to foremost
 }
