@@ -96,27 +96,38 @@ void KChartView::createTempData()
     QArray<int>tmp(nbrow);
     QArray<bool>tmpbool(nbrow);
     for (col = 0;col < nbrow;col++) 
-    	{
-    	
+    	{	
     	tmp[col]=0;
     	tmpbool[col]=FALSE;
     	}
-    	tmp[0]=50;
-    	tmpbool[0]=TRUE;
+    	//init 4 elements
+    params->lbl+="KDE";
+    params->lbl+="KOFFICE";
+    params->lbl+="KCHART";
+    params->lbl+="LINUX";
+    tmp[0]=50;
+    tmpbool[0]=TRUE;
+    
     params->explode=tmp;
     params->missing=tmpbool;
+    
 }
 
 
 void KChartView::edit()
 {
   kchartDataEditor ed;
+  KChartParameters* params=((KChartPart*)part())->params();
+  QStringList lbl=params->lbl;
   KChartData *dat = (( (KChartPart*)part())->data());
   ed.setData(dat);
+  ed.setLabel(lbl);
   if (ed.exec() != QDialog::Accepted) {
     return;
   }
   ed.getData(dat);
+  
+  ed.getLabel(params);
   repaint();
 }
 
